force-app/main/default/objects/Agreement_Condition_Table_Type_Mapping__mdt/Agreement_Condition_Table_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Agreement Condition Table/Type Mapping</label>
    <pluralLabel>Agreement Condition Table/Type Mappings</pluralLabel>
</CustomObject>