force-app/main/default/objects/Agreement_Condition_Table_Type_Mapping__mdt/fields/Condition_Table__c.field-meta.xml
<CustomField>
    <fullName>Condition_Table__c</fullName>
    <description>Field to store codition table type for Agreement line item</description>
    <label>Condition Table</label>
    <length>4</length>
    <type>Text</type>
</CustomField>