force-app/main/default/objects/Agreement_Condition_Table_Type_Mapping__mdt/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <description>Field to store condition Type for Agreement line item</description>
    <label>Condition Type</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>