force-app/main/default/objects/Agreement_Condition_Table_Type_Mapping__mdt/fields/Has_Error__c.field-meta.xml
<CustomField>
    <fullName>Has_Error__c</fullName>
    <description>Checkbox to Determine Error</description>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>