force-app/main/default/objects/Agreement_Condition_Table_Type_Mapping__mdt/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>Line Type of Agreement line item</description>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Material</fullName>
                <default>true</default>
                <label>Material</label>
            </value>
            <value>
                <fullName>Material Group 1</fullName>
            </value>
            <value>
                <fullName>Partner Role</fullName>
            </value>
            <value>
                <fullName>Price Group - Material</fullName>
            </value>
            <value>
                <fullName>Price Group - Material Group 1</fullName>
            </value>
            <value>
                <fullName>UC - Material</fullName>
            </value>
            <value>
                <fullName>UC - Material Group 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>