force-app/main/default/objects/Agreement_Condition_Table_Type_Mapping__mdt/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Field to store the subtype value.(DCP-43353)</description>
    <label>Subtype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>